--- a/.github/workflows/ciBuild.yaml
+++ b/.github/workflows/ciBuild.yaml
@@ -4,7 +4,7 @@ on:
   push
 
 jobs:
-  build-and-push-containers:
+  ci-build-containers:
     runs-on: ubuntu-latest
     env: 
       package-name: specgurka-cli
