Rename SpecGurka project to SyncGurka

--- a/tests/SyncGurka.UnitTests/SyncGurka.UnitTests.csproj
+++ b/tests/SyncGurka.UnitTests/SyncGurka.UnitTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\SpecGurka\SpecGurka.csproj" />
+    <ProjectReference Include="..\..\source\SyncGurka\SyncGurka.csproj" />
   </ItemGroup>
 
 </Project>
