Refacor reading and writing gurka

--- a/source/GenGurka/GenGurka.csproj
+++ b/source/GenGurka/GenGurka.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GurkaSpec\GurkaSpec.csproj" />
+    <ProjectReference Include="..\GurkaSpec\GurkaSpec.csproj" />
   </ItemGroup>
 
 </Project>
