--- a/source/SyncGurka/dockerfile
+++ b/source/SyncGurka/dockerfile
@@ -12,4 +12,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/runtime:7.0-alpine
 WORKDIR /App
 COPY --from=build-env /App/out .
-ENTRYPOINT ["dotnet", "SpecGurka.dll"]
+ENTRYPOINT ["dotnet", "SyncGurka.dll"]
