--- a/.github/workflows/ciBuild.yaml
+++ b/.github/workflows/ciBuild.yaml
@@ -7,7 +7,7 @@ jobs:
   ci-build-containers:
     runs-on: ubuntu-latest
     env: 
-      package-name: specgurka-cli
+      package-name: syncgurka-cli
     permissions:
       contents: read
       packages: write
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3.1.0
     # TODO: Run unit tests
-    - name: Build SpecGurka-image
+    - name: Build SyncGurka-image
       uses: docker/build-push-action@v3
       with:
         context: ${{env.working-directory}}
