--- a/source/SyncGurka/dockerfile
+++ b/source/SyncGurka/dockerfile
@@ -4,9 +4,9 @@ WORKDIR /App
 # Copy everything
 COPY . ./
 # Restore as distinct layers
-RUN dotnet restore
+RUN dotnet restore SyncGurka.sln
 # Build and publish a release
-RUN dotnet publish -c Release -o out
+RUN dotnet publish SyncGurka.sln -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/runtime:7.0-alpine
