--- a/tests/ReqnrollDemo.Spec/ReqnrollDemo.Spec.csproj
+++ b/tests/ReqnrollDemo.Spec/ReqnrollDemo.Spec.csproj
@@ -15,12 +15,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Drivers\" />
-    <Folder Include="Support\" />
+    <ProjectReference Include="..\..\source\ReqnrollDemo\ReqnrollDemo.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\ReqnrollDemo\ReqnrollDemo.csproj" />
+    <UpToDateCheckInput Remove="Features\DemoProject.feature" />
+    <UpToDateCheckInput Remove="Features\Company\manage-company.feature" />
+    <UpToDateCheckInput Remove="Features\Departments\manage-departments.feature" />
+    <UpToDateCheckInput Remove="Features\Employees\manage-employees.feature" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckBuild Remove="Features\DemoProject.feature.cs" />
+    <UpToDateCheckBuild Remove="Features\Company\manage-company.feature.cs" />
+    <UpToDateCheckBuild Remove="Features\Departments\manage-departments.feature.cs" />
+    <UpToDateCheckBuild Remove="Features\Employees\manage-employees.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="**/*.feature"/>
   </ItemGroup>
 
 </Project>
