--- a/source/VizGurka/VizGurka.csproj
+++ b/source/VizGurka/VizGurka.csproj
@@ -10,4 +10,14 @@
     <ProjectReference Include="..\GurkaSpec\GurkaSpec.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="GurkaFiles\**\*">
+       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
