--- a/source/VizGurka/VizGurka.csproj
+++ b/source/VizGurka/VizGurka.csproj
@@ -20,4 +20,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.38.0" />
+  </ItemGroup>
+
 </Project>
