feat: did a super simple demo of how the new proccess can work

--- a/tests/ReqnrollDemo.Spec/ReqnrollDemo.Spec.csproj
+++ b/tests/ReqnrollDemo.Spec/ReqnrollDemo.Spec.csproj
@@ -36,4 +36,8 @@
     <Content Include="**/*.feature"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestResults\" />
+  </ItemGroup>
+
 </Project>
