feat: Display multiple features Vizgurka
* feat: added header separation to table, to render correctly.
* feat: Added a resizeable sidebar where all the links to different features will be.
* chore: added a font. to improve readability
Read about this font here:
https://www.brailleinstitute.org/freefont/
This font is free to use and helps people with reading problems read text better with this font.
* feat: added a basic layout that lists all the features in a project
* feat: started with a page for a individual page.
Now i just got it working with navigating.
* feat: moved the showing of features to the dynamic feature page.
* chore: added MarkDig, markdown to html parser.
* feature: styles for several features.
* feat: added list of scenarios in sidemenu.
this way of listing all the scenarios was way better than having a dropdown on every feature-page.
* feat: a start for searching features and keep sidebar width in localstorage.
* refactor: renaming classes and now have the description at the start of the feature.
* feat: more description support
Now supports descriptions inside backgrounds, scenarios, and these inside of rules.
* feat: dropdown for a feature, do show all scenarios inside that one.
* chore: small description on index page.
* refactor: small changes and made when resizing sidebar you dont select text that is not intended.
* feat: added a file-reader.
This file reader reads the latest .gurka file from the GurkaFiles directory, makes it very easy to add new runs to the project, just add it to the folder, restart and its done.
* chore: removed config file, because now you can pass arguments.
* feat: you can now pass the project name as argument.
* chore: small refactorings.
* feat: made the background appear a little more different than a scenario.
* chore: help for project name
* feat: display time for scenario and feature.

--- a/source/VizGurka/VizGurka.csproj
+++ b/source/VizGurka/VizGurka.csproj
@@ -10,4 +10,18 @@
     <ProjectReference Include="..\GurkaSpec\GurkaSpec.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="GurkaFiles\**\*">
+       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.38.0" />
+  </ItemGroup>
+
 </Project>
