feat: added support for adding time together for examples and scenarios with the same name.
This might need refactoring later. Solved the problem with adding time when test is ran as a scenario-outline. And now it matches based on steps also, because some scenarios had the same name, and then some became without time.

Refs: #16

--- a/source/GurkaSpec/GurkaSpec.csproj
+++ b/source/GurkaSpec/GurkaSpec.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>SpecGurka.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="TrxFileParser">
+      <HintPath>..\..\..\..\..\.nuget\packages\trxfileparser\4.3.0\lib\netstandard2.0\TrxFileParser.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
