feat: added Dockerfile
you can now create a docker image from the from the application, then you have to pass the GurkaFiles directory as a volume when you start the container.

--- a/source/GurkaSpec/GurkaSpec.csproj
+++ b/source/GurkaSpec/GurkaSpec.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="TrxFileParser">
-      <HintPath>..\..\..\..\..\.nuget\packages\trxfileparser\4.3.0\lib\netstandard2.0\TrxFileParser.dll</HintPath>
-    </Reference>
+      <PackageReference Include="TrxFileParser" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
