scenario-outline support, docker support, frontend
* feat: dropdown for a feature, do show all scenarios inside that one.

Refs: #7

* feat: did a super simple demo of how the new proccess can work

* chore: upgraded packages for GenGurka and ReqnrollDemo.Spec

Refs: #14

* feat: function to convert an example for scenario-outlines into a markdowntable.

Refs: #16

* feat: examples added for a scenario if they are present/if they are a scenario-outline

* feat: added rendering for example table and removed scrollbars on sidebar

* feat: added support for adding time together for examples and scenarios with the same name.

This might need refactoring later. Solved the problem with adding time when test is ran as a scenario-outline. And now it matches based on steps also, because some scenarios had the same name, and then some became without time.

Refs: #16

* refactor: VizGurka css classes.

Refs: #16

* refactor: small refactorings.

* feat: toggle to see the error message of a failed step.

* refactor: rename icons

* feat: you can now click on a scenario to highlight it and get a targeted frame around.

* feat/refactor: refactored the markdown to html and made the target shadow different colors based on the status of the scenario.

* feat: filter options for features.

this includes having a filter and searching at the same time.

Refs: #17

* refactor: rewrote failing tests.

* refactor: changed small things in alot of files, changed some styling faults.

* refactor: small refactorings.

* feat: analytics page with table that shows the slowest scenarios.

* feat: tooltips and fixes.

Tooltips were requested by a potential user, so i added it to backgrounds and rules. Also fixed som alignment issues with icons.

* chore: update README.md

* feat: added some data to show a difference between regular scenarios and scenario-outlines.

* feat: added Dockerfile

you can now create a docker image from the fr

--- a/source/GurkaSpec/GurkaSpec.csproj
+++ b/source/GurkaSpec/GurkaSpec.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>SpecGurka.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+      <PackageReference Include="TrxFileParser" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
