--- a/.github/workflows/buildAndPushImage.yaml
+++ b/.github/workflows/buildAndPushImage.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - 'source/SyncGurka/**'
+      - 'tests/SyncGurka.UnitTests/**'
 
 jobs:
   build-and-push-containers:
