--- a/source/GenGurka/GenGurka.csproj
+++ b/source/GenGurka/GenGurka.csproj
@@ -6,6 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>SpecGurka.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <PackAsTool>true</PackAsTool>
+    <IsPackable>true</IsPackable>
+    <ToolCommandName>gengurka</ToolCommandName>
+    <Version>1.0.0</Version>
+    <Company>Nonsultant AB</Company>
   </PropertyGroup>
 
   <ItemGroup>
