--- a/.github/workflows/gengurka-buildAndPushPackage.yaml
+++ b/.github/workflows/gengurka-buildAndPushPackage.yaml
@@ -29,4 +29,4 @@ jobs:
      
     - name: Push generated package to GitHub registry
       run: |
-        dotnet nuget push ${{env.working-directory}}/source/GenGurka/bin/Release/*.nupkg --source https://nuget.pkg.github.com/nonsultant/index.json --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }}
+        dotnet nuget push ${{ github.workspace }}/source/GenGurka/bin/Release/*.nupkg --source https://nuget.pkg.github.com/nonsultant/index.json --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }}
