--- a/source/GenGurka/GenGurka.csproj
+++ b/source/GenGurka/GenGurka.csproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,10 +9,9 @@
     <PackAsTool>true</PackAsTool>
     <IsPackable>true</IsPackable>
     <ToolCommandName>gengurka</ToolCommandName>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Company>Nonsultant AB</Company>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Gherkin" Version="30.0.4" />
     <PackageReference Include="Reqnroll" Version="2.2.1" />
@@ -20,9 +19,7 @@
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.5.23" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\GurkaSpec\GurkaSpec.csproj" />
   </ItemGroup>
-
 </Project>
