--- a/source/VizGurka/VizGurka.csproj
+++ b/source/VizGurka/VizGurka.csproj
@@ -19,7 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Markdig" Version="0.38.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
+    <PackageReference Include="Postgrest-csharp" Version="3.5.1" />
+    <PackageReference Include="supabase" Version="1.1.1" />
+    <PackageReference Include="Supabase.Storage" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
