--- a/source/GenGurka/GenGurka.csproj
+++ b/source/GenGurka/GenGurka.csproj
@@ -14,6 +14,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Gherkin" Version="30.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
     <PackageReference Include="Reqnroll" Version="2.2.1" />
     <PackageReference Include="TrxFileParser" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -21,5 +24,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GurkaSpec\GurkaSpec.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
