Refactor DirectoryPath, Utilize Appsettings to allow user to set directory paths.

--- a/source/VizGurka/appsettings.example.json
+++ b/source/VizGurka/appsettings.example.json
@@ -5,6 +5,10 @@
         "Key": "SERVICE_ROLE_KEY",
         "Bucket": "[Name of your bucket]"
     },
+    "Path": {
+    "DirectoryPath": "./GurkaFiles",
+    "ImagePath": "./GurkaFiles/Images"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
