Dockerfile and appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,9 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "VizGurka.Pages.IndexModel": "Information"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "FeatureFileRepository": {
@@ -52,6 +51,7 @@
   },
   "GitHub":  {
     "Token":  "github_pat_",
+    "Extension":  ".gurka",
     "Repositories": [
       "WinLas/LasCore",
       "WinLas/Lasia.Web"
