roll back some of my refactors to fix the link logic

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,16 +15,15 @@
       "Owner": "WinLas",
       "Repositories": [
         {
-          "Name": "Repo",
+          "Name": "LasCore",
           "Product": [
-            "Product Name",
-            "Product Name"
+            "Las.AcceptanceTests"
           ]
         },
         {
-          "Name": "Repo",
+          "Name": "Lasia.Web",
           "Product": [
-            "Product Name"
+            "product"
           ]
         }
       ]
