--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -8,7 +8,7 @@
     }
   },
   "FeatureFileRepository": {
-    "BaseUrl": "https://owner.visualstudio.com / https://github.com"
+    "BaseUrl": "https://github.com"
   },
   "TagPatterns": {
     "Github": {
@@ -16,16 +16,15 @@
       "Owner": "WinLas",
       "Repositories": [
         {
-          "Name": "Repo",
+          "Name": "LasCore",
           "Product": [
-            "Product Name",
-            "Product Name"
+            "Las.AcceptanceTests"
           ]
         },
         {
-          "Name": "Repo",
+          "Name": "Lasia.Web",
           "Product": [
-            "Product Name"
+            "product"
           ]
         }
       ]
@@ -51,7 +50,7 @@
     "ShellImagePath": "./GurkaFiles/images"
   },
   "GitHub":  {
-    "Token":  "github_pat_",
+    "Token":  "github_pat",
     "Repositories": [
       "WinLas/LasCore",
       "WinLas/Lasia.Web"
