feat: Trigger Lucene indexing on hitting refresh button on /index. General refactor to handle null values.
* luceneIndexService now being triggered if github fetch fails. This is neccessary to handle local only files if the user dont want to use their remote.

* Lucene indexing now triggered upon refreshing gurka files on index page. Logging now works on index.cs

* Initialize and variables and fix misc null warnings.

* Handle rawFilePath being null.

* Dockerfile and appsettings

* roll back some of my refactors to fix the link logic

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,13 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "VizGurka.Pages.IndexModel": "Information"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "FeatureFileRepository": {
-    "BaseUrl": "https://github.com"
+    "BaseUrl": "https://owner.visualstudio.com / https://github.com"
   },
   "TagPatterns": {
     "Github": {
@@ -50,7 +49,8 @@
     "ShellImagePath": "./GurkaFiles/images"
   },
   "GitHub":  {
-    "Token":  "github_pat",
+    "Token":  "github_pat_",
+    "Extension":  ".gurka",
     "Repositories": [
       "WinLas/LasCore",
       "WinLas/Lasia.Web"
