Author name mapping now in place in the appsettings.

--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -50,11 +50,15 @@
     "ShellImagePath": "./GurkaFiles/images"
   },
   "GitHub":  {
-    "Token":  "github_pat",
+    "Token":  "github_pat_",
     "Repositories": [
       "WinLas/LasCore",
       "WinLas/Lasia.Web"
     ]
+  },
+  "Authors": {
+    "PETER JOHANSSON" : "PETER JOHANSSON",
+    "HOGBERG" : "ANDRÉ HÖGBERG"
   },
   "Schedule": {
     "IntervalMinutes": 1
