Documentation button url now dynamic in appsettings

--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -57,8 +57,11 @@
     ]
   },
   "Authors": {
-    "PETER JOHANSSON" : "PETER JOHANSSON",
-    "HOGBERG" : "ANDRÉ HÖGBERG"
+    "PETER JOHANSSON": "PETER JOHANSSON",
+    "HOGBERG": "ANDRÉ HÖGBERG"
+  },
+  "DocumentationUrl" : {
+    "Url": "https://github.com/nonsultant/specgurka"
   },
   "Schedule": {
     "IntervalMinutes": 1
