clean up appsetting

--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -57,8 +57,8 @@
     ]
   },
   "Authors": {
-    "PETER JOHANSSON": "PETER JOHANSSON",
-    "HOGBERG": "ANDRÉ HÖGBERG"
+    "PERSON": "PERSON PERSON",
+    "NOSREP": "NOSREP NOSREP"
   },
   "DocumentationUrl" : {
     "Url": "https://github.com/nonsultant/specgurka"
