--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -50,11 +50,18 @@
     "ShellImagePath": "./GurkaFiles/images"
   },
   "GitHub":  {
-    "Token":  "github_pat",
+    "Token":  "github_pat_",
     "Repositories": [
       "WinLas/LasCore",
       "WinLas/Lasia.Web"
     ]
+  },
+  "Authors": {
+    "PERSON": "PERSON PERSON",
+    "NOSREP": "NOSREP NOSREP"
+  },
+  "DocumentationUrl" : {
+    "Url": "https://github.com/nonsultant/specgurka"
   },
   "Schedule": {
     "IntervalMinutes": 1
