--- a/source/VizGurka/appsettings.json
+++ b/source/VizGurka/appsettings.json
@@ -27,6 +27,10 @@
             "product"
           ]
         }
+      ],
+      "PrettyProductNames": [
+        {"Las.AcceptanceTests" :  "Pretty Las Core"},
+        {"Client.Gherkin" :  "Pretty Gherkin"}
       ]
     },
     "Azure": {
